--- a/ToDo
+++ b/ToDo
@@ -1,9 +1,8 @@
 Todo:
-
-> Add Animation to site
-
+> Add smooth scroll (gsap)
+> Figure out how to fix animation on mobile screens
 
 
 FIXED:
-
+> Add Animation to site
 > Make the project panels smaller
