> All Animation done
> All Animation done

--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,9 @@
 Todo:
+> Add Text to the site
 
 
 FIXED:
+> All Animation done
 > Figure out how to fix animation on mobile screens
 > Add Animation to site
 > Make the project panels smaller
